force-app/main/default/objects/clofor_com_cfs__VATBank__c/fields/clofor_com_cfs__AmountSellingInclTAXForBank__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountSellingInclTAXForBank__c</fullName>
    <label>AMOUNT SELLING INCL TAX-BANK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>