force-app/main/default/objects/clofor_com_cfs__VATBank__c/fields/clofor_com_cfs__BankRollUpStatus__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BankRollUpStatus__c</fullName>
    <label>BANK ROLLUP STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__RECEIVABLE_PAYABLE_ROLLUP_STATUS</valueSetName>
    </valueSet>
</CustomField>