force-app/main/default/objects/clofor_com_cfs__VATBank__c/fields/clofor_com_cfs__VATInvNo__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__VATInvNo__c</fullName>
    <formula>clofor_com_cfs__VATInvoiceID__r.clofor_com_cfs__RED_INVOICE_NO__c
&amp;
 clofor_com_cfs__VATInvoiceID__r.clofor_com_cfs__VATInvoiceNoFromVendor__c</formula>
    <label>VAT INV NO</label>
    <type>Text</type>
</CustomField>